# ebay-finder

./: .gitignore  AGENTS.md  CONTRACT.md  README.md  SETUP.md  SKILL.md  pyproject.toml  skills-lock.json
.agents/skills/ebay-finder/: CONTRACT.md
.agents/skills/ebay-finder/ebay_finder/: __init__.py  cli.py  contract.py  url_builder.py
.agents/skills/ebay-finder/examples/: pokemon.json  sample_listings.json  typewriter.json
.agents/skills/ebay-finder/reference/: discovery-ladder.md
.agents/skills/ebay-finder/tests/: test_browse_api.py  test_ranker.py  test_url_builder.py
ebay_finder/: __init__.py  browse_api.py  ebay_grammar.py  ranker.py  report.py
examples/: typewriter.json
reference/: ebay-search-grammar.md
tests/: test_browse_api.py  test_ranker.py
treasure_hunter/: __init__.py  browse_api.py  cli.py  contract.py  ranker.py  report.py  url_builder.py
