[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "treasure-hunter-ebay"
version = "0.1.0"
description = "Vague plain-language wish -> ranked eBay hunt. Zero runtime dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ke Wang" }]
keywords = ["ebay", "search", "agent", "skill", "shopping", "claude", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: End Users/Desktop",
]
dependencies = []   # stdlib only, on purpose

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/KeWang0622/ebay-treasure-hunter"
Issues = "https://github.com/KeWang0622/ebay-treasure-hunter/issues"

[project.scripts]
treasure-hunter = "treasure_hunter.cli:main"

[tool.setuptools]
packages = ["treasure_hunter"]
